--- a/tmux.conf
+++ b/tmux.conf
@@ -9,15 +9,10 @@ bind ^C new-window
 bind ^D detach-client
 bind ^N next-window
 bind ^P previous-window
-bind ^K confirm-before -p "kill-window #S? (y/n)" kill-window
 bind ^O last-window
 
 # rotate
 bind ^R rotate-window -D
-
-# set window notifications
-setw -g monitor-activity on
-set -g visual-activity on
 
 # automatically set window title
 setw -g automatic-rename on
@@ -25,34 +20,52 @@ setw -g automatic-rename on
 # allows for faster key repetition
 set -g repeat-time 0
 
+# set window notifications
+setw -g monitor-activity on
+set -g visual-activity on
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
 # copy selection color
 setw -g mode-fg black
 setw -g mode-bg green
 
-# alert message line
-set -g message-fg black
-set -g message-bg green
-
 # status line
-set -g status-bg blue
-set -g status-fg black
-set -g status-left " "
-set -g status-right "#[fg=white,bg=black] [#S]#[fg=red,bright] [ #[fg=cyan]#H #[fg=red,bright]]
-set -g status-right-length 100
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
 
-setw -g window-status-current-fg blue
-setw -g window-status-current-bg black
 setw -g window-status-current-format " [#I#F] #W "
 setw -g window-status-format "[#I#F#W]"
-setw -g window-status-activity-fg black
-setw -g window-status-activity-bg white
-setw -g window-status-activity-attr default
-
-# border
-set -g pane-border-fg blue
-set -g pane-border-bg black
-set -g pane-active-border-fg blue
-set -g pane-active-border-bg blue
 
 # split
 bind | split-window -h
@@ -61,6 +74,7 @@ bind _ split-window -v
 setw -g aggressive-resize on
 set -g history-limit 1000000
 
+# vim-esque
 bind-key ESCAPE copy-mode
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
@@ -68,7 +82,6 @@ bind-key -t vi-copy 'y' copy-selection
 bind \; command-prompt
 
 # split windows like vim
-# vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v
 bind v split-window -h
 
@@ -84,8 +97,6 @@ bind > resize-pane -R 2
 bind - resize-pane -D 2
 bind + resize-pane -U 2
 
-# bind : to command-prompt like vim
-# this is the default in tmux already
 bind : command-prompt
 
 # vi-style controls for copy mode
