Update tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# C-b, really/
+set-option -g prefix C-a
+
 # first index is 1, not 0
 set -g base-index 1
 
@@ -18,6 +21,7 @@ bind ^R rotate-window -D
 setw -g automatic-rename on
 
 # allows for faster key repetition
+set -s escape-time 0
 set -g repeat-time 0
 
 # set window notifications
@@ -89,6 +93,7 @@ bind v split-window -h
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
+
 bind l select-pane -R
 
 # resize panes like vim
