Refactor tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,24 +1,15 @@
+################################################################################
+## behavior
+
 # C-b, really/
-set-option -g prefix C-x
+set -g prefix C-x
 
 # first index is 1, not 0
 set -g base-index 1
+setw -g pane-base-index 1
 
-# 256 color
-set -g default-terminal "xterm-256color"
-
-# screen-like
-bind ^C new-window
-bind ^D detach-client
-bind ^N next-window
-bind ^P previous-window
-bind ^O last-window
-
-# rotate
-bind ^R rotate-window -D
-
-# automatically set window title
-setw -g automatic-rename on
+# disable bells
+set -g bell-action none
 
 # allows for faster key repetition
 set -s escape-time 0
@@ -28,35 +19,57 @@ set -g repeat-time 0
 setw -g monitor-activity on
 set -g visual-activity on
 
+# limit history depth
+set -g history-limit 10000
+
+# instruct tmux to interpret utf8 characters
+set -g utf8 on
+setw -g utf8 on
+
+# automatically set window title
+setw -g automatic-rename on
+
+# do not automatically resize windows
+setw -g aggressive-resize off
+
+# vi-style controls for copy mode
+setw -g mode-keys vi
+
+################################################################################
+## look & feel
+
+# 256 color
+set -g default-terminal "screen-256color"
+
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set -g status-bg colour235 #base02
+set -g status-fg colour136 #yellow
+set -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+setw -g window-status-fg colour244
+setw -g window-status-bg default
+#setw -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+setw -g window-status-current-fg colour166 #orange
+setw -g window-status-current-bg default
+#setw -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set -g pane-border-fg colour235 #base02
+set -g pane-active-border-fg colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set -g message-bg colour235 #base02
+set -g message-fg colour166 #orange
 
 # pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+set -g display-panes-active-colour colour33 #blue
+set -g display-panes-colour colour166 #orange
 
 # clock
-set-window-option -g clock-mode-colour colour64 #green
+setw -g clock-mode-colour colour64 #green
 
 # copy selection color
 setw -g mode-fg black
@@ -71,12 +84,22 @@ set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[
 setw -g window-status-current-format " [#I#F] #W "
 setw -g window-status-format "[#I#F#W]"
 
+################################################################################
+## key shortcuts
+
+# screen-like
+bind ^C new-window
+bind ^D detach-client
+bind ^N next-window
+bind ^P previous-window
+bind ^O last-window
+
+# rotate
+bind ^R rotate-window -D
+
 # split
 bind | split-window -h
 bind _ split-window -v
-
-setw -g aggressive-resize on
-set -g history-limit 1000000
 
 # vim-esque
 bind-key ESCAPE copy-mode
@@ -93,7 +116,6 @@ bind v split-window -h
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
-
 bind l select-pane -R
 
 # resize panes like vim
@@ -104,5 +126,3 @@ bind + resize-pane -U 2
 
 bind : command-prompt
 
-# vi-style controls for copy mode
-setw -g mode-keys vi
