--- a/tmux.conf
+++ b/tmux.conf
@@ -39,10 +39,10 @@ setw -g mode-keys vi
 ## look & feel
 
 # https://github.com/sjl/vitality.vim/issues/8#issuecomment-7791852
-set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
+set -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]50;CopyToClipboard=general\007\E]50;EndCopy\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
 
 # 256 color
-set -g default-terminal "screen-256color"
+set -g default-terminal 'screen-256color'
 
 # default statusbar colors
 set -g status-bg colour235 #base02
