--- a/tmux.conf
+++ b/tmux.conf
@@ -52,12 +52,12 @@ set -g status-attr default
 # default window title colors
 setw -g window-status-fg colour244
 setw -g window-status-bg default
-#setw -g window-status-attr dim
+setw -g window-status-attr dim
 
 # active window title colors
 setw -g window-status-current-fg colour166 #orange
 setw -g window-status-current-bg default
-#setw -g window-status-current-attr bright
+setw -g window-status-current-attr bright
 
 # pane border
 set -g pane-border-fg colour235 #base02
@@ -75,8 +75,8 @@ set -g display-panes-colour colour166 #orange
 setw -g clock-mode-colour colour64 #green
 
 # copy selection color
-setw -g mode-fg black
-setw -g mode-bg green
+#setw -g mode-fg black
+#setw -g mode-bg green
 
 # status line
 set -g status-interval 60
